--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "googleapis": "^49.0.0"
+    "googleapis": "^49.0.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0"
   }
 }
